Generate documentation with Redoc
